--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 [dependencies]
 serenity = {version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model", "voice"] }
+songbird = "0.4.1"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
