--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+poise = "0.6.1"
 serenity = {version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model", "voice"] }
 songbird = "0.4.1"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
