Working on queueing songs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 poise = "0.6.1"
+regex = "1.10.5"
+reqwest = "0.12.4"
 serenity = {version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model", "voice"] }
 songbird = "0.4.1"
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync"] }
+youtube_dl = { version = "0.10.0", features = ["tokio"] }
