--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ regex = "1.10.5"
 reqwest = "0.11"
 serenity = {version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model", "voice"] }
 songbird = "0.4.1"
+symphonia = "0.5.4"
 tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread", "sync"] }
