--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ serenity = {version = "0.12.2", features = ["client", "gateway", "rustls_backend
 songbird = "0.4.1"
 symphonia = "0.5.4"
 tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread", "sync"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
