--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.96"
 audiopus = "0.2.0"
 poise = "0.6.1"
 regex = "1.10.5"
-reqwest = "0.11"
+reqwest = { version = "0.11", features = ["json"] }
+serde = "1.0.218"
+serde_json = "1.0.139"
 serenity = { version = "0.12.2", features = [
     "client",
     "gateway",
