--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.96"
 audiopus = "0.2.0"
+once_cell = "1.21.3"
 poise = "0.6.1"
 regex = "1.10.5"
 reqwest = { version = "0.12", features = ["json"] }
